syntax = "proto3";

package log_sync.v1.pnl;

import "google/api/annotations.proto";
import "google/api/client.proto";

option go_package = "github.com/meritz-corp/cds-apis/go/log_sync/v1;log_sync";

// PnlService is the service that handles all pnl requests.
service PnlService {
    // ListPnlSummaries will return pnl summaries.
    rpc ListPnlSummaries(ListPnlSummariesRequest) returns (ListPnlSummariesResponse) {
        option (google.api.http) = {
            get: "/v1/pnl/summaries"
        };
        option (google.api.method_signature) = "";
    }
}


enum PeriodType {
    PERIOD_TYPE_UNSPECIFIED = 0; // Unspecified period type
    PERIOD_TYPE_DAILY = 1; // Daily period
    PERIOD_TYPE_WEEKLY = 2; // Weekly period
    PERIOD_TYPE_MONTHLY = 3; // Monthly period
    PERIOD_TYPE_YEARLY = 4; // Yearly period
}

// PnL 요약 구조체
message PnlSummary {
    // 기간 유형
    PeriodType period_type = 1;

    // 기준 날짜 (RFC3339 형식)
    string trade_date = 2;

    // 총 손익 (문자열로 표현된 decimal)
    string total_pnl = 5;

    // 총 거래량 (문자열로 표현된 decimal)
    string total_volume = 6;

    // 총 거래 횟수
    int64 total_transactions = 7;

    // 레코드 수
    int64 record_count = 8;
}

// ListPnlSummariesRequest payload
message ListPnlSummariesRequest {
    // The maximum number of pnl summaries to return. The service may return fewer than
    // this value.
    // If unspecified, at most 50 rows will be returned.
    // The maximum value is 1024; values above 1024 will be coerced to 1024.
    int32 page_size = 1;

    // Token of the page to retrieve. If not specified, the first
    // page of results will be returned. Use the value obtained from
    // `next_page_token` in the previous response to request
    // the next page of results.
    //
    // When paginating, all other parameters provided to `ListPnlSummaries` must match
    // the call that provided the page token.
    string page_token = 2;

    // Available Sequence and Operator
    // * start_date
    //   * `>`, `>=`, `=`, `<=`, `<`
    // * end_date
    //   * `>`, `>=`, `=`, `<=`, `<`
    // * period_type
    //   * `equal`
    //
    // Examples
    // * filter=start_date>"2025-01-01T00" AND end_date<"2025-01-31T23" 
    // * filter=period_type=PERIOD_TYPE_MONTHLY
    string filter = 3;
}

// ListPnlSummariesResponse response
message ListPnlSummariesResponse {
    // The list of rows that matched the query.
    repeated PnlSummary summaries = 1;

    // Pagination token used to retrieve the next page of results.
    // Pass the content of this string as the `page_token` attribute of
    // the next request. `next_page_token` is not returned for the last
    // page.
    string next_page_token = 2;
}